js基础部分完结

--- a/15简易聊天框.html
+++ b/15简易聊天框.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="js/jquery.min.js"></script>
     <style>
         ul {
             width: 400px;
@@ -24,27 +25,45 @@
 
     </ul>
     <script type="text/javascript">
-        var btn = document.getElementById('btn');
-        var textarea = document.getElementById('text');
-        var ul = document.querySelector('ul');
-        btn.onclick = function() {
-            if (textarea.value == '') {
-                alert("未输入！")
-            } else {
-                var li = document.createElement('li');
-                li.innerHTML = textarea.value + "<a href='javascript:;'>删除</a>";
-                ul.insertBefore(li, ul.children[0]);
-                textarea.value = '';
-                // 删除 当前a所在的父亲li，也就是remove ul下的li
-                var as = document.querySelectorAll('a');
-                for (var i = 0; i < as.length; i++) {
-                    as[i].onclick = function() {
-                        ul.removeChild(this.parentNode);
-                    }
-                }
+        // var btn = document.getElementById('btn');
+        // var textarea = document.getElementById('text');
+        // var ul = document.querySelector('ul');
+        // btn.onclick = function() {
+        //     if (textarea.value == '') {
+        //         alert("未输入！")
+        //     } else {
+        //         var li = document.createElement('li');
+        //         li.innerHTML = textarea.value + "<a href='javascript:;'>删除</a>";
+        //         ul.insertBefore(li, ul.children[0]);
+        //         textarea.value = '';
+        //         // 删除 当前a所在的父亲li，也就是remove ul下的li
+        //         var as = document.querySelectorAll('a');
+        //         for (var i = 0; i < as.length; i++) {
+        //             as[i].onclick = function() {
+        //                 ul.removeChild(this.parentNode);
+        //             }
+        //         }
 
-            }
-        }
+        //     }
+        // }
+
+        $(function(){
+            $('button').on('click',function(){
+                var li=$('<li></li>');
+                li.html($('#text').val()+"<a href=javascript:;>删除</a>");
+                
+                li.slideDown(function(){
+                    $('ul').append(li);
+                });
+            })
+            $('ul').on('click','a',function(){
+                $(this).parent().slideUp(function(){
+                    $(this).remove();
+                })
+            })
+            var obj;
+            $.extend(obj,$('button'));
+        })
     </script>
 </body>
 
